# ReinaManager

./: .gitignore  .prettierignore  CHANGELOG.md  CNAME  README.ja_JP.md  README.md  README.zh_CN.md  README.zh_TW.md  biome.json  cliff.toml  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  uno.config.ts  vite.config.ts
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: build.yml  release.yml
assets/: Backup-BLMaqk_J.js  Backup-BbLMu_NG.js  Backup-Bo60qkYV.js  Backup-CBUQK9Nk.js  Backup-Cknob77E.js  Backup-ClUgmnTE.js  Backup-D16BQv-i.js  Backup-D1kMEk40.js  Backup-DNBp8KAS.js  Backup-DpK32lYx.js  Backup-QW1Igm-6.js  Backup-jzfidCEE.js  Backup-oN6mOiuA.js  Backup-saa6L5ZB.js  Card-B0Kl623z.js  Card-CR2xLD7L.js  Card-CXRbG3bK.js  Card-CcP84HZ5.js  Card-D7G9AZy6.js  Card-DMcW3QH8.js  Card-n47tElop.js  CardContent-BVd1vCqa.js  CardContent-C0-Dl678.js  CardContent-CDCOxQVW.js  CardContent-CHLnZwAB.js  CardContent-DlcCBitq.js  CardContent-DoK7YRoL.js  CardContent-jWOrUIdi.js  Edit-2W--5zBg.js  Edit-BWQ6hcuq.js  Edit-Bm4xNNHt.js  Edit-CcNc514O.js  Edit-DHFxnA5X.js  Edit-Duf_VVIw.js  Edit-ph2_QUT6.js  InfoBox-6tC8wPOB.js  InfoBox-BB4nb4w7.js  InfoBox-D0I9WVay.js  InfoBox-DIWdHTy8.js  InfoBox-DWZZ1kMS.js  (+111 more)
kriya-mcp/: .mcp.json  README.md  agent-policy.yaml  tools.json
src/: App.css  App.tsx  main.tsx
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: backup.rs  lib.rs  m20250927_000001_baseline_migration.rs  m20250928_000002_split_games_table.rs  m20260131_000006_migrate_clear_to_play_status.rs  m20260201_000007_clean_empty_strings.rs  m20260227_000008_add_sync_status.rs  m20260227_000009_add_bgm_profile.rs  m20260318_000008_add_vndb_token_and_collection_sync.rs  m20260331_000009_add_kungal_support.rs  m20260505_000010_remove_redundant_created_at.rs  m20260706_000014_migrate_game_sources.rs  m20260712_000015_split_game_local_path.rs  m20260722_000016_backfill_game_defaults.rs
src-tauri/migrations/: 002_custom_name_and_cover.sql
src-tauri/reina-path/src/: lib.rs
src-tauri/src/: backup.rs  entity.rs  lib.rs  migrations.rs  utils.rs
src-tauri/src/backup/: archive.rs  database.rs  savedata.rs  webdav.rs
src-tauri/src/database/: db.rs  dto.rs  service.rs
src-tauri/src/database/repository/: collections_repository.rs  game_stats_repository.rs  games_repository.rs  settings_repository.rs
src-tauri/src/entity/: game_sessions.rs  game_sources.rs  game_statistics.rs  games.rs  kun_data.rs  prelude.rs  savedata.rs  user.rs
src-tauri/src/game/: monitor.rs  scan.rs
src-tauri/src/game/cover/: custom.rs
src-tauri/src/game/launch/: linux.rs  windows.rs
src-tauri/src/game/monitor/: windows.rs
src-tauri/src/utils/: bgm_auth.rs  command_ext.rs  connection.rs  fs.rs  game_cover.rs  game_monitor.rs  http.rs  launch.rs  legacy_migration.rs  scan.rs
src-tauri/src/utils/game_monitor/: linux.rs  windows.rs
src-tauri/src/utils/launch/: linux.rs  windows.rs
src/api/: bgm.ts  gameMetadataService.ts  http.ts  index.ts  kun.ts  mixed.ts  vndb.ts  ymgal.ts
src/components/: AlertBox.tsx  AppLayout.tsx  Cards.tsx  CardsBatchBar.tsx  FilterModal.tsx  FilterSortModal.tsx  InputDialog.tsx  LaunchModal.tsx  LinkWithScrollSave.tsx  PathSettingsModal.tsx  SearchBox.tsx  SelectedGameGuard.tsx  SortModal.tsx  UpdateModal.tsx  Windows.tsx
src/lib/: queryClient.ts
src/locales/: en-US.json  en_US.json  ja-JP.json  ja_JP.json  zh-CN.json  zh-TW.json  zh_CN.json  zh_TW.json
src/metadata/: index.ts  sourceAdapter.ts  sourceAutoResolve.ts  sourceCandidate.ts  sourceRecord.ts
src/pages/: CollectionPage.tsx  HomePage.tsx  LibrariesPage.tsx  SettingsPage.tsx
src/providers/: ToolpadReactRouterAppProvider.tsx  queryClient.ts  router.tsx
src/routes/: index.tsx  router.tsx
src/services/: appExit.ts  base.ts  cloudUserReview.ts  fileService.ts  gameService.ts  index.ts  savedataService.ts  settingsService.ts  types.ts
src/store/: appStore.ts  appStoreMigrations.ts  gamePlayStore.ts  index.ts
src/types/: collection.ts  i18n.d.ts  index.ts  types.ts
src/utils/: appExit.ts  appUtils.ts  cloudCollectionSync.ts  customCover.ts  dataTransform.ts  database.ts  diff.ts  enhancedSearch.ts  errors.ts  gameStats.ts  imageUtils.ts  index.ts  localStorage.ts  metadata.ts  repository.ts  (+2 more)
(+148 files in other folders)
