[workspace]
members = ["reina-path", "migration"]

[package]
name = "ReinaManager"
version = "0.26.0"
description = "A lightweight visual novel manager"
authors = ["huoshen80"]
license = "GNU AFFERO GENERAL PUBLIC LICENSE"
repository = "https://github.com/huoshen80/ReinaManager/"
edition = "2024"
rust-version = "1.97.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "reina_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "~2.6.3", features = [] }
dotenvy = "0.15.7"

[dependencies]
# Serialization & logging
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
log = "0.4.33"

# Tauri core and plugins
tauri = { version = "~2.11.5", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-autostart = "~2.5.1"
tauri-plugin-dialog = "~2.7.2"
tauri-plugin-http = { version = "~2.5.9", default-features = false, features = [
    "rustls-tls",
    "http2",
    "charset",
    "macos-system-configuration",
    "unsafe-headers",
] }
tauri-plugin-log = "~2.9.0"
tauri-plugin-shell = "~2.3.5"
tauri-plugin-single-instance = "~2.4.3"
tauri-plugin-updater = "~2.10.1"
tauri-plugin-window-state = "=2.2.3"
tauri-plugin-store = "~2.4.4"

# System / utilities
arboard = { version = "3.6.1", default-features = false, features = [
    "image-data",
    "wayland-data-control",
] }
sevenz-rust2 = { version = "0.21.3", default-features = false, features = [
    "compress",
    "util",
    "zstd",
] }
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
parking_lot = "0.12.5"

# Async runtime / DB
tokio = { version = "1.53.1", features = ["rt-multi-thread", "time", "sync", "fs"] }
sea-orm = { version = "1.1.20", default-features = false, features = [
    "sqlx-sqlite",
    "runtime-tokio",
    "macros",
    "with-json",
] }

# Misc
getrandom = "0.4.3"
url = "2.5.8"
pinyin = "0.11.0"
walkdir = "2.5.0"
migration = { path = "migration" }
reina-path = { path = "reina-path" }
image = { version = "0.25.10", default-features = false, features = ["png"] }

# Windows system APIs
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_Registry",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_UI_Input_KeyboardAndMouse",
] }

[target.'cfg(target_os = "linux")'.dependencies]
xcb = "1.7.0"
zbus = "5.18.0"
zbus_systemd = { version = "0.26100.0", features = ["systemd1"] }


[profile.dev]
incremental = true # 以较小的步骤编译您的二进制文件。
split-debuginfo = "unpacked"

[profile.release]
codegen-units = 1 # 允许 LLVM 执行更好的优化。
lto = true        # 启用链接时优化。
opt-level = "z"   # 优先考虑小的二进制文件大小。如果您更喜欢速度，请使用 `3`。
panic = "abort"   # 通过禁用 panic 处理程序来提高性能。
strip = "debuginfo" # 移除调试信息，但保留符号名以便排查错误。
