[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
log = "0.4"
sqlx = { version = "0.8", default-features = false, features = [
  "sqlite",
  "runtime-tokio",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"

reina-path = { path = "../reina-path" }
url = "2.5.8"

[dependencies.sea-orm-migration]
version = "1.1.0"
default-features = false
features = [
  "runtime-tokio",
  "sqlx-sqlite",
]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
