[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
log = "0.4.33"
sqlx = { version = "0.8.6", default-features = false, features = [
  "sqlite",
  "runtime-tokio",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

reina-path = { path = "../reina-path" }
url = "2.5.8"

[dependencies.sea-orm-migration]
version = "1.1.20"
default-features = false
features = [
  "runtime-tokio",
  "sqlx-sqlite",
]

[dev-dependencies]
tokio = { version = "1.53.0", features = ["macros", "rt-multi-thread"] }
